--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="">
+<html ng-app="main">
 
 <head>
 	<meta charset="UTF-8">
@@ -9,9 +9,12 @@
 </head>
 
 <body ng-cloak ng-csp>
-	<h1 ng-init="name = 'Gérald'">Hello {{name}}</h1>
+	<asf-header></asf-header>
+	<asf-body></asf-body>
+	<asf-footer></asf-footer>
 	<script src="../node_modules/angular/angular.js"></script>
 	<script src="app.js"></script>
+	<script src="asf-layout/asf-layout.module.js"></script>
 </body>
 
 </html>
