--- a/app/index.html
+++ b/app/index.html
@@ -4,17 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Exo</title>
-	<link rel="stylesheet" href="../node_modules/angular/angular-csp.css" />
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="wpk/bundle.css" />
 </head>
 
 <body ng-cloak ng-csp>
 	<asf-header></asf-header>
 	<asf-body></asf-body>
 	<asf-footer></asf-footer>
-	<script src="../node_modules/angular/angular.js"></script>
-	<script src="app.js"></script>
-	<script src="asf-layout/asf-layout.module.js"></script>
+	<script src="wpk/bundle.js"></script>
 </body>
 
 </html>
