--- a/app/asf-layout/tmpl/asf-body.html
+++ b/app/asf-layout/tmpl/asf-body.html
@@ -1,2 +1,9 @@
 <h1 ng-init="name = 'Gérald'">Hello {{name}}</h1>
 <asf-star></asf-star>
+<br>
+<asf-star note="4"></asf-star>
+<br>
+<input ng-init="myNote = 2" type="text" ng-model="myNote">
+<br>
+<asf-star note="myNote"></asf-star>
+<br>
