--- a/app/asf-layout/tmpl/asf-body.html
+++ b/app/asf-layout/tmpl/asf-body.html
@@ -3,7 +3,7 @@
 <br>
 <asf-star note="4"></asf-star>
 <br>
-<input ng-init="myNote = 2" type="text" ng-model="myNote">
+<input ng-init="myNote = 2" type="number" ng-model="myNote">
 <br>
 <asf-star note="myNote"></asf-star>
 <br>
