--- a/app/asf-layout/tmpl/asf-body.html
+++ b/app/asf-layout/tmpl/asf-body.html
@@ -1,9 +1,1 @@
-<h1 ng-init="name = 'Gérald'">Hello {{name}}</h1>
-<asf-star></asf-star>
-<br>
-<asf-star note="4"></asf-star>
-<br>
-<input ng-init="myNote = 2" type="number" ng-model="myNote">
-<br>
-<asf-star note="myNote"></asf-star>
-<br>
+<ui-view></ui-view>
