--- a/app/asf-layout/tmpl/asf-header.html
+++ b/app/asf-layout/tmpl/asf-header.html
@@ -1,2 +1,7 @@
-header florent
+<menu>
+	<item><a ui-sref="home" ui-sref-active="active">Home</a></item>
+	<item><a ui-sref="products" ui-sref-active="active">Products</a></item>
+	<item><a ui-sref="services" ui-sref-active="active">Services</a></item>
+	<item><a ui-sref="contact" ui-sref-active="active">Contact</a></item>
+</menu>
 <hr>
