add url rewriting

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html ng-app="main">
 
 <head>
+	<base href="/app/">
 	<meta charset="UTF-8">
 	<title>Exo</title>
 	<link rel="stylesheet" href="wpk/bundle.css" />
